# f1-metrics

./: .gitignore  DEPLOYMENT.md  README.md  pyproject.toml  render.yaml  requirements.txt
.streamlit/: config.toml
backend/: config.py
backend/api/: main.py  schemas.py
backend/api/routes/: constructors.py  drivers.py  metrics.py
backend/data/: cache.py  loader.py
backend/metrics/: base.py
backend/metrics/constructor/: __init__.py  championship.py  competitiveness.py  lap_performance.py  pit_stops.py  qualifying.py  race_performance.py  reliability.py
backend/metrics/driver/: qualifying.py  race.py  teammate.py
cache/: 0299b07175265fc6.json  036b470dfc08cba1.json  03dbb4bcf283f15d.json  061663caf1395af3.json  0a04d5660763f1d0.json  0c77b9867e0424da.json  116d649e3eda84d3.json  168ce8e467cfb8ef.json  1958558b599ff275.json  20abe3e809dfce6b.json  237a531646fd2781.json  35fa1b8fe96013f7.json  370f8f56fc7167cc.json  4a1a4504d4d9a4e1.json  4e43900cd75ef3a0.json  560af8dac24ba959.json  661e352af81a060c.json  72e5eb5c0710ab61.json  7cbb02b6c3f44d79.json  7cfe420c82f4c394.json  7f779eb76a4dbccf.json  87af404c13b9b4d0.json  87ffc358091dc6b8.json  8cbb67ed96c7fe54.json  8d849dbd79cfa3a7.json  8f7ba38f1a15862d.json  962bc4dd21abd10f.json  97b24491e1995af6.json  9da7d52ddbcb03e7.json  a2e2e395648cb8d8.json  aadd9c26ea794322.json  af47b2fe91faa070.json  b0a3f468143adde1.json  b997f2eb71d8f7ab.json  b9b0286abc304416.json  bab87ced1ba8768a.json  be54f1f07fd0785d.json  c3e3c02dece554f0.json  c64384b6ee43a1a5.json  cbd824e9e600899c.json  (+18 more)
frontend/: app.py
